--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 							</div>
 						</div>
 						<nav>
-							<ul>
+							<!--<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<!--<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
-							</ul>
+							<!-- </ul> -->
 						</nav>
 					</header>
 
